# fastcontext

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/environment/: Dockerfile  build.sh
benchmark/evaluation/: bash_command_parser.py  bench_mini_swe_agent.py  query_gen.py  run_score.py  system_prompt_subagent_cli.md  utils.py
benchmark/evaluation/configs/: example.env
benchmark/swebench/: bench_fastcontext.py  bench_swefc.py  run.sh.sample
eval/: README.md  config.yaml  pyproject.toml
eval/fc_eval/: __init__.py  analyze.py  cli.py  config.py  dashboard.py  metrics.py  run.py
eval/tests/: test_metrics.py  test_run.py
prompts/: glm-kimi-multi-fc.yaml  glm-kimi-pro-fc.yaml  glm-kimi-qa-fc.yaml  gpt-multi-fc.yaml  gpt-pro-fc.yaml  gpt-qa-fc.yaml
serving/: proxy.yaml  serving-qwen3-4b-instruct.yaml  serving-qwen3-coder-30b.yaml  serving-qwen3p5-4b.yaml  serving-qwen3p5-9b.yaml  serving-qwen3p6-35b.yaml  test_api.py
skills/fastcontext/: SKILL.md
src/fastcontext/: cli.py  tui.py
src/fastcontext/agent/: agent.py  agent_factory.py  budget.py  config.py  context.py  events.py  llm.py  observed.py  system.md  utils.py
src/swefc/: cli.py
src/swefc/agent/: agent.py  agent_factory.py  context.py  llm.py  system.md  utils.py
tests/: conftest.py  test_agent.py  test_citation_hallucination.py  test_config.py  test_context_budget.py  test_glob_sort.py  test_grep_context.py  test_grep_count.py  test_grep_default_mode.py  test_grep_doc_cap.py  test_grep_glob_examples.py  test_grep_single_file_filename.py  test_grep_timeout.py  test_llm.py  test_max_tokens.py  test_path_resolution.py  test_read_negative_offset.py  test_read_truncation.py  test_run_failure.py  test_tool.py  test_tool_result_cap.py  test_toolset.py  test_utils_final_answer.py
training/fastcontext-rl/: agent_judge_rule.md  agent_runner.py  api_sglang.py  generate_with_fastcontext.py  rl_data_preprocess.py  run_rl_4b.sh  run_rl_qwen3_4b.sh  system.md  utils.py
training/fastcontext-sft/data/: gen_multiturn_traj.py  gen_parallel_toolcalls_1turn.py
training/fastcontext-sft/scripts/: run_sft_qwen3.5_4b.sh  run_sft_qwen3.5_9b.sh  run_sft_qwen3_4b.sh  (+1 more)
training/swefc-rl/: agent_judge.md  agent_judge.py  agent_runner.py  api_sglang.py  generate_with_swefc.py  rl_data_preprocess.py  run_rl_4b.sh  run_rl_qwen3_4b.sh
(+18 files in other folders)
