[project]
name = "fastcontext"
version = "0.2.0"
description = "Read-only repository-exploration agent that coding agents delegate to over bash."
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "aiofiles>=25.1.0",
    "jinja2>=3.1.6",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "rich>=13.0.0",
    "textual>=0.80.0",
]


[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"


[project.scripts]
fastcontext = "fastcontext.cli:main"

[tool.isort]
profile = "black"
line_length = 119
ignore_whitespace = true
py_version = 310

[tool.black]
line_length = 119

[tool.pytest.ini_options]
asyncio_mode = "auto"
# The eval harness (eval/) is a separate package with its own env; collecting it from the repo root
# fails on `import fc_eval`. Scope root `pytest` to the harness tests; run eval tests from eval/.
testpaths = ["tests"]
