[project]
name = "fastcontext-eval"
version = "0.1.0"
description = "A small eval harness for FastContext: launch runs, score trajectories, view a dashboard."
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
fc-eval = "fc_eval.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fc_eval"
module-root = ""

[tool.pytest.ini_options]
# Stops pytest's rootdir walk at this file. Without it, pytest picks up the repo root's
# `asyncio_mode` option and warns on every run, since pytest-asyncio is not a dep here.
testpaths = ["tests"]
